# market-maker-backtester

./: .gitignore  CMakeLists.txt  CMakePresets.json  HANDOFF.md  info.txt
.claude/: settings.json
.claude/agents/: markets-tutor.md  systems-reviewer.md
.claude/hooks/: guard-protected-dirs.sh  session-journal.sh
.claude/skills/critique-mm/: SKILL.md
.claude/skills/explain/: SKILL.md
.claude/skills/latency-review/: SKILL.md
.claude/skills/quiz/: SKILL.md
.github/workflows/: ci.yml
engine/: CMakeLists.txt  main.cpp  orderbook.cpp  orderbook.h  sample_tcp.py  tcp_reader.cpp  tcp_reader.h  types.h  websocket_reader.cpp  websocket_reader.h
journal/: learning-log.md
sim/: CMakeLists.txt  README.md  accounting.h  flow_generator.h  market_maker.h  sim.cpp
sim/flow/: zi_flow.cpp
